Ensure all references are made to correct projects, Initialize repository file, move Attack class into models and update using statements and update MonsterSlayer.Application name.

--- a/P1/MonsterSlayerReborn/MonsterSlayerReborn.Gameplay/MonsterSlayerReborn.Gameplay.csproj
+++ b/P1/MonsterSlayerReborn/MonsterSlayerReborn.Gameplay/MonsterSlayerReborn.Gameplay.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\MonsterSlayerReborn.Gameplay\MonsterSlayerReborn.Gameplay.csproj" />
+    <ProjectReference Include="..\MonsterSlayerReborn.Models\MonsterSlayerReborn.Models.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
