--- a/P1/MonsterSlayerReborn/MonsterSlayerReborn.Application/MonsterSlayerReborn.csproj
+++ b/P1/MonsterSlayerReborn/MonsterSlayerReborn.Application/MonsterSlayerReborn.csproj
@@ -1,10 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\MonsterSlayerReborn.Repo\MonsterSlayerReborn.Repo.csproj" />
     <ProjectReference Include="..\MonsterSlayerReborn.Gameplay\MonsterSlayerReborn.Gameplay.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
