--- a/P1/MonsterSlayerReborn/MonsterSlayerReborn.Repo/MonsterSlayerReborn.Repo.csproj
+++ b/P1/MonsterSlayerReborn/MonsterSlayerReborn.Repo/MonsterSlayerReborn.Repo.csproj
@@ -2,6 +2,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MonsterSlayerReborn.Gameplay\MonsterSlayerReborn.Gameplay.csproj" />
+    <ProjectReference Include="..\MonsterSlayerReborn.Models\MonsterSlayerReborn.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
   </ItemGroup>
 
   <PropertyGroup>
