Update Player class to include a no parameter constructor, update field access modifiers in Game class, link the csproj of Models to Application, add user validation and menu in Program class, update ServerRepo constructor.

--- a/P1/MonsterSlayerReborn/MonsterSlayerReborn.Application/MonsterSlayerReborn.csproj
+++ b/P1/MonsterSlayerReborn/MonsterSlayerReborn.Application/MonsterSlayerReborn.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MonsterSlayerReborn.Repo\MonsterSlayerReborn.Repo.csproj" />
     <ProjectReference Include="..\MonsterSlayerReborn.Gameplay\MonsterSlayerReborn.Gameplay.csproj" />
+    <ProjectReference Include="..\MonsterSlayerReborn.Models\MonsterSlayerReborn.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
