--- a/P1/MonsterSlayerReborn/MonsterSlayerReborn.Repo/MonsterSlayerReborn.Repo.csproj
+++ b/P1/MonsterSlayerReborn/MonsterSlayerReborn.Repo/MonsterSlayerReborn.Repo.csproj
@@ -3,6 +3,9 @@
   <ItemGroup>
     <ProjectReference Include="..\MonsterSlayerReborn.Gameplay\MonsterSlayerReborn.Gameplay.csproj" />
     <ProjectReference Include="..\MonsterSlayerReborn.Models\MonsterSlayerReborn.Models.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,5 +21,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
